Fixes bug 197. Fixed the ffmpeg h264 error that it height/width was not divisible by 2. Added a command to fix the wrongfully uploaded videos as images:  php app/console imdc:media:fix-types
Need to run:
php app/console imdc:media:fix-types
php app/console imdc:media:generate-thumbnails --flush

--- a/web/bundles/imdcterptube/_css/terptube.css
+++ b/web/bundles/imdcterptube/_css/terptube.css
@@ -33,7 +33,6 @@ body {
 .tt-navbar-top {
   min-height: 70px;
   color: white;
-  background:#032929;
   /* background-color: $eku-primary; */
 }
 
@@ -68,8 +67,7 @@ body {
   top: 70px;
   left: 0;
   bottom: 25px;
-  background-color: #a5aeb8;
-  margin-top:10px;
+  background-color: #888888;
 }
 /* line 80, sass/_base.scss */
 .tt-navbar-side a {
@@ -78,19 +76,12 @@ body {
 }
 /* line 85, sass/_base.scss */
 .tt-navbar-side div {
-  padding:5px;
-}
-.tt-navbar-side span:hover{
-   text-decoration:none;
+  padding-bottom: 10px;
 }
 /* line 88, sass/_base.scss */
 .tt-navbar-side div img {
   max-width: 50px;
   max-height: 50px;
-  opacity:0.8;
-}
-.tt-navbar-side div img:hover {
-  opacity:1.0;
 }
 @media (max-width: 1200px) {
   /* line 71, sass/_base.scss */
@@ -103,7 +94,7 @@ body {
   }
   /* line 101, sass/_base.scss */
   .tt-navbar-side div {
-    /*padding-bottom: 0;*/
+    padding-bottom: 0;
     display: inline-block;
   }
 }
@@ -167,7 +158,7 @@ body {
 /* line 8, sass/_forum.scss */
 .tt-forum-thumbnail .tt-media-element .tt-media-img, .tt-thread-thumbnail .tt-media-element .tt-media-img, .tt-forum-thumbnail .tt-media-element .tt-media-video, .tt-thread-thumbnail .tt-media-element .tt-media-video, .tt-forum-thumbnail .tt-media-element .tt-media-audio, .tt-thread-thumbnail .tt-media-element .tt-media-audio {
   /* max-height: 180px; */
-  /* bug 142 */#428BCA
+  /* bug 142 */
 }
 
 /* line 1, sass/_help.scss */
@@ -373,18 +364,4 @@ tbody tr td {
 .tt-thread-reply-container {
   overflow-y: scroll;
   /* scroll threadReplyContainer */
-}
-a{
-	color:#101010;
-	outline:none;
-}
-a:hover{
-	color:#2A6496;
-	text-decoration:none;
-}
-.active span{
-	/*color:#2A6496;*/
-}
-a:active{
-	color:#2A6496;
 }
